--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,16 @@ port: 4008
 
 ### Navbar Settings ###
 nav_exclude:                                            # The following paths are excluded from navbar
+   ### Navbar Settings ###
+nav:
+  - title: "Homework 6 Notebook"
+    url: /python_notebooks/IS445_HW6.1_XingluZhao.ipynb
+
+nav_exclude:  # The following paths are excluded from navbar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
-  - documentation/partials/**                           # For Documentation Only
+  - documentation/partials/**  # For Documentation Only  # For Documentation Only
 
 
 ### Author Info ###
