--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,6 @@ plugins:
 port: 4008
 
 ### Navbar Settings ###
-nav_exclude:                                            # The following paths are excluded from navbar
-   ### Navbar Settings ###
 nav:
   - title: "Homework 6 Notebook"
     url: /python_notebooks/IS445_HW6.1_XingluZhao.ipynb
@@ -35,7 +33,7 @@ nav_exclude:  # The following paths are excluded from navbar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
-  - documentation/partials/**  # For Documentation Only  # For Documentation Only
+  - documentation/partials/**  # For Documentation Only
 
 
 ### Author Info ###
