--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 ### Site Settings ###
 ### Site Settings ###
 title: IS445 Jekyll Template
-description: I am definitely not a corgi!
+description: "I am definitely not a corgi!"
 baseurl: ""  # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository: luzhao9.github.io  # Change to <your-username>/<your-username>.github.io if that doesn't work
 open_new_tab: false  # Opens external URLs in new tab (works for posts, projects and navbar only)
