--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@
 # 3. Push to github
 # NOTE: it looks like you need to rebuild + repush everytime you update this _config.yml file
 
+
 ### Site Settings ###
-### Site Settings ###
-title: IS445 Jekyll Template
+title: "IS445 Jekyll Template"
 description: "I am definitely not a corgi!"
 baseurl: ""  # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
-repository: luzhao9.github.io  # Change to <your-username>/<your-username>.github.io if that doesn't work
+repository: "luzhao9.github.io"  # Change to <your-username>/<your-username>.github.io if that doesn't work
 open_new_tab: false  # Opens external URLs in new tab (works for posts, projects and navbar only)
 
 
