--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ nav_exclude:  # The following paths are excluded from navbar
 
 ### Author Info ###
 author:
-  name              : A. P. Corgi
+  name              : Xinglu Zhao
   image             : https://media.tenor.com/8RcIoWTKYR4AAAAe/scuze-corgi.png
 #  behance           : your_username
 # dribbble          : your_username
@@ -117,7 +117,7 @@ defaults:
 
 ### Exclude from processing ###
 ## Add yours here if you have other stuff in your github.io page!!!**
-exclude:
+
 exclude:
   - README.md
   - README.md~
